--- a/netfx.props
+++ b/netfx.props
@@ -46,6 +46,7 @@
 
   <ItemGroup>
       <PackageReference Include="System.Data.SqlClient" Version="4.5.1" Condition="'$(TargetFramework)' != 'net40'" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.1" Condition="'$(TargetFramework)' != 'net40'" />
   </ItemGroup>
 
 </Project>
