--- a/nuget/SqlClient.nuspec
+++ b/nuget/SqlClient.nuspec
@@ -27,7 +27,7 @@
       </group>
       <group targetFramework="netstandard2.0">
         <dependency id="FSharp.Core" version="4.3.4" />
-        <dependency id="System.Data.SqlClient" version="4.5.1" />
+        <dependency id="Microsoft.Data.SqlClient" version="4.5.1" />
         <dependency id="System.Configuration.ConfigurationManager" version="4.5.0" />
       </group>
     </dependencies>
