--- a/tests/SqlClient.Tests/app.config
+++ b/tests/SqlClient.Tests/app.config
@@ -5,7 +5,7 @@
   </configSections>
   <!--<connectionStrings configSource="connectionStrings.Azure.config"/>-->
   <connectionStrings>
-    <add name="AdventureWorks" connectionString="Data Source=.;Initial Catalog=AdventureWorks2012;Integrated Security=True" />
-    <add name="MasterDb" connectionString="Data Source=.;Initial Catalog=master;Integrated Security=True" />
+    <add name="AdventureWorks" connectionString="Server=tcp:localhost,1434;Initial Catalog=AdventureWorks;User ID=sa;Password=P@ssw0rd!" />
+    <add name="MasterDb" connectionString="Server=tcp:localhost,1434;Initial Catalog=master;User ID=sa;Password=P@ssw0rd!" />
   </connectionStrings>
 </configuration>
