--- a/src/SqlClient.DesignTime/SqlClient.DesignTime.fsproj
+++ b/src/SqlClient.DesignTime/SqlClient.DesignTime.fsproj
@@ -2,7 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\netfx.props" />
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
+    <!--<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>-->
     <AssemblyName>FSharp.Data.SqlClient.DesignTime</AssemblyName>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -12,8 +13,14 @@
   </PropertyGroup>
     
   <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="4.1.18" Condition="'$(TargetFramework)' == 'net40'" />
-    <PackageReference Include="FSharp.Core" Version="4.3.4" Condition="'$(TargetFramework)' == 'net461'" />
+    <PackageReference Include="FSharp.Core" Version="4.6.0" />
+
+    <PackageReference Include="Microsoft.SqlServer.TransactSql.ScriptDom" Version="150.4573.2" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.6.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
+
+    <!--<PackageReference Include="FSharp.Core" Version="4.1.18" Condition="'$(TargetFramework)' == 'net40'" />-->
+    <!--<PackageReference Include="FSharp.Core" Version="4.3.4" Condition="'$(TargetFramework)' == 'net461'" />-->
     <!--<PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" Condition="'$(TargetFramework)' == 'net461'" />
     
     <PackageReference Include="Microsoft.SqlServer.TransactSql.ScriptDom" Version="14.0.3811.1" />
@@ -33,11 +40,13 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
-  </ItemGroup>-->
+  </ItemGroup>
   <ItemGroup Condition="$(TargetFramework) == 'net461'">
     <Reference Include="System.Data" />
   </ItemGroup>
+  -->
   <ItemGroup>
+    <None Include="paket.references" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="..\..\paket-files\fsprojects\FSharp.TypeProviders.SDK\src\ProvidedTypes.fsi">
       <Link>ProvidedTypes.fsi</Link>
@@ -67,13 +76,18 @@
     <None Include="Scripts\ReverseLineOrderForNotex.fsx" />
     <None Include="Scripts\XE.fsx" />
   </ItemGroup>
+  
   <Target Name="CopyAssembliesToTPFolder" AfterTargets="Build">
     <ItemGroup>
-      <DesignTimeAssemblies Include="$(OutputPath)\FSharp.Data.SqlClient.DesignTime.*" />
-      <DesignTimeAssemblies Include="$(OutputPath)\Microsoft.SqlServer.*.dll" />
+      <DesignTimeAssemblies Include="$(OutputPath)FSharp.Data.SqlClient.DesignTime.*" />
+      <DesignTimeAssemblies Include="$(OutputPath)Microsoft.Data.SqlClient.*" />
+      <DesignTimeAssemblies Include="$(OutputPath)Microsoft.SqlServer.*" />
+      <DesignTimeAssemblies Include="$(OutputPath)System.Configuration.ConfigurationManager.*" />
     </ItemGroup>
     <Copy SourceFiles="@(DesignTimeAssemblies)" DestinationFolder="..\..\bin\typeproviders\fsharp41\$(TargetFramework)" />
   </Target>
+
+<!--
   <Target Name="CopyAssembliesToLegacyFolder" AfterTargets="Build" Condition="$(TargetFramework) == 'net40'">
     <ItemGroup>
       <DesignTimeAssemblies Include="$(OutputPath)\FSharp.Data.SqlClient.DesignTime.*" />
@@ -81,6 +95,6 @@
     </ItemGroup>
     <Copy SourceFiles="@(DesignTimeAssemblies)" DestinationFolder="..\..\bin\$(TargetFramework)" />
   </Target>
-  
+-->
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
