--- a/src/SqlClient/Properties/launchSettings.json
+++ b/src/SqlClient/Properties/launchSettings.json
@@ -2,8 +2,9 @@
   "profiles": {
     "SqlClient": {
       "commandName": "Executable",
-      "executablePath": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Professional\\Common7\\IDE\\devenv.exe",
-      "commandLineArgs": "..\\..\\Tests.sln"
+      "executablePath": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\devenv.exe",
+      "commandLineArgs": "..\\..\\Tests.sln",
+      "workingDirectory": "C:\\Projects\\FSharp.Data.SqlClient\\src\\SqlClient"
     }
   }
 }
