--- a/src/SqlClient/SqlClient.fsproj
+++ b/src/SqlClient/SqlClient.fsproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\netfx.props" />
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <AssemblyName>FSharp.Data.SqlClient</AssemblyName>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -17,15 +17,18 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>..\..\bin\net40\FSharp.Data.SqlClient.XML</DocumentationFile>
   </PropertyGroup>
+  
   <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="4.1.18" Condition="'$(TargetFramework)' == 'net40'" />
+    <!--<PackageReference Include="FSharp.Core" Version="4.1.18" Condition="'$(TargetFramework)' == 'net40'" />-->
     <PackageReference Include="FSharp.Core" Version="4.3.4" Condition="'$(TargetFramework)' != 'net40'" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" Condition="'$(TargetFramework)' != 'net40'" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net40'">
+  
+  <!--<ItemGroup Condition="'$(TargetFramework)' == 'net40'">
     <Reference Include="System.Data" />
     <Reference Include="System.Transactions" />
-  </ItemGroup>
+  </ItemGroup>-->
+  
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="..\..\paket-files\fsprojects\FSharp.TypeProviders.SDK\src\ProvidedTypes.fsi">
@@ -42,10 +45,12 @@
     <Compile Include="ISqlCommand.fs" />
     <Compile Include="Runtime.fs" />
   </ItemGroup>
+  
   <Target Name="CopyAssemblies" AfterTargets="Build">
     <ItemGroup>
-      <RuntimeAssemblies Include="$(OutputPath)\FSharp.Data.SqlClient.*" /> 
-    </ItemGroup>    
+      <RuntimeAssemblies Include="$(OutputPath)\FSharp.Data.SqlClient.*" />
+    </ItemGroup>
     <Copy SourceFiles="@(RuntimeAssemblies)" DestinationFolder="..\..\bin\$(TargetFramework)" />
   </Target>
+  
 </Project>
