--- a/tests/SqlClient.Tests/connectionStrings.config
+++ b/tests/SqlClient.Tests/connectionStrings.config
@@ -1,5 +1,5 @@
 ﻿<connectionStrings>
-  <add name="AdventureWorks" connectionString="Data Source=.;Initial Catalog=AdventureWorks2012;Integrated Security=True" />
-  <add name="AdventureWorksDesignOnly" connectionString="Data Source=.;Initial Catalog=AdventureWorks2012;Integrated Security=True" />
-  <add name="MasterDb" connectionString="Data Source=.;Initial Catalog=master;Integrated Security=True" />
+  <add name="AdventureWorks" connectionString="Server=tcp:localhost,1434;Initial Catalog=AdventureWorks;User ID=sa;Password=P@ssw0rd!" />
+  <add name="AdventureWorksDesignOnly" connectionString="Server=tcp:localhost,1434;Initial Catalog=AdventureWorks;User ID=sa;Password=P@ssw0rd!" />
+  <add name="MasterDb" connectionString="Server=tcp:localhost,1434;Initial Catalog=master;User ID=sa;Password=P@ssw0rd!" />
 </connectionStrings>
